Light dark mode fixes

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,8 +9,8 @@
     display: flex;
     align-items: center;
     min-height: 82px;
-    justify-content: space-between;
-    padding: 0 2rem;
+    justify-content: flex-start;
+    padding: 0 1rem;
     margin: 0;
 
     @media (min-width: 1280px) {
@@ -147,6 +147,8 @@
   .Header-header h1 {
     color: var(--color-charcoal);
     font-size: 20px;
+    white-space: pre;
+    flex-grow: 1;
     @media (min-width: 650px) {
       font-size: 30px;
     }
@@ -215,7 +217,11 @@
   }
 
   .social-links {
-    display: flex;
+    display: none;
+
+    @media (min-width: 640px) {
+      display: flex;
+    }
   }
 
   .social-links a {
@@ -237,6 +243,7 @@
 
   .Header-header nav.menu-mobile {
     display: flex;
+    width: 0;
     @media (min-width: 1280px) {
       display: none;
     }
@@ -417,8 +424,8 @@
   padding: 0;
   position: relative;
   user-select: none;
-  position: absolute;
-  right: 180px;
+  margin: 0;
+  left: -3rem;
 }
 
 .Header .menu-icon .navicon {
@@ -479,4 +486,10 @@
 .Header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
 .Header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
   top: 0;
+}
+
+.dark-mode .Header .menu-icon .navicon,
+.dark-mode .Header .menu-icon .navicon:before,
+.dark-mode .Header .menu-icon .navicon:after {
+  background: #fff;
 }
